zero-schema-macros/tests/ui/fail/15_recursive_array.rs
struct RecursiveArray {
    children: [RecursiveArray; 1],
}

fn main() {}
